# Made-With-ML

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Made-With-ML.code-workspace  Makefile  README.md  cluster.yaml  index.html  install-aws.sh  install-docker-requirements.sh  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: workloads.yaml
conf/: evaluate.yaml  get_best_run_id.yaml  predict.yaml  train.yaml  tune.yaml
config/: train.yml
deploy/jobs/: workloads.sh
docs/: index.md
madewithml/: data.py
madewithml/data/: index.html
madewithml/evaluate/: index.html
madewithml/models/: index.html
madewithml/predict/: index.html
madewithml/serve/: index.html
madewithml/train/: index.html
madewithml/tune/: index.html
madewithml/utils/: index.html
notebooks/: benchmarks.ipynb  madewithml.ipynb
scripts/: evaluate.py  get_best_run_id.py  predict.py  serve.py  train.py  tune.py
src/madewithml/: evaluate.py  models.py  predict.py  serve.py  train.py  tune.py  utils.py
